--- a/index.html
+++ b/index.html
@@ -75,11 +75,19 @@
 
   <div id="es">
     <h2>Resumen</h2>
-    <p>Ingeniero en Física con MSc. en Física y estudiante de MSc. en Astronomía, con experiencia en instrumentación astronómica y hardware de radiofrecuencia.</p>
+    <p>Ingeniero en Física con MSc. en Física y estudiante de MSc. en Astronomía, con una amplia trayectoria liderando equipos de desarrollo en instrumentación astronómica de radiofrecuencia en las bandas milimétrica, submilimétrica, decimétrica y hectométrica,
+con aplicaciones en la industria. Especializado en el diseño, implementación y validación de hardware analógico y digital para algoritmos de interferometría, incluyendo VLBI (Very Long Baseline Interferometry), beamforming, pseudo-correlación, separación de
+banda lateral y análisis de transmisión y recepción (Tx/Rx) en distintos medios.</p>
 
     <h2>Experiencia</h2>
     <ul>
-      <li>Universidad de Chile - Desarrollo de radiotelescopio CHARTs (2024-presente)</li>
+      <li>Ingeniero de proyecto, Universidad de Chile
+• Líder de desarrollo, construcción e implementación del radio telescopio CHARTs (CanadianChilean array for radio transients studies).
+• Desarrollo de hardware analógico enfocado en multiplexación por división de frecuencia (FDM)
+y demultiplexación (DEMUX) en la banda de 0.1 a 2.5 GHz.
+• Desarrollo de hardware digital para algoritmos de correlación y detección de eventos transitorios en plataformas FPGA (Field-Programmable Gate Array) y GPU (Graphics Processing Unit),
+interconectadas mediante una red óptica de 100 GBe/s.
+• Administración, gestión y supervisión de estudiantes.</li>
       <li>IIT, UdeC - Radar en banda L con FPGA ZCU-208 (2023-2024)</li>
       <li>CePIA - Backend para radiómetros 183 y 22 GHz, MMIC, FPGA (2017–2023)</li>
     </ul>
